--- a/app/src/main/res/layout/activity_sign_up_candidate.xml
+++ b/app/src/main/res/layout/activity_sign_up_candidate.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <EditText
-            android:id="@+id/editTextTextPersonName5"
+            android:id="@+id/edtEmail"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
@@ -43,8 +43,9 @@
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
 
+
         <EditText
-            android:id="@+id/editTextTextPersonName4"
+            android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
@@ -54,12 +55,12 @@
             android:background="@drawable/edittext_background"
             android:ems="10"
             android:hint="Password"
-            android:inputType="textPersonName"
+            android:inputType="textPassword"
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName6"
+            android:id="@+id/edtName"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
@@ -73,23 +74,52 @@
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
 
-        <EditText
-            android:id="@+id/editTextTextPersonName3"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="8dp"
+
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="30sp"
+            android:layout_marginVertical="16sp"
             android:background="@drawable/edittext_background"
-            android:ems="10"
-            android:hint="Gender"
-            android:inputType="textPersonName"
-            android:paddingStart="20dp"
-            android:textColorHint="#464646" />
+            android:orientation="horizontal"
+            android:paddingVertical="10sp">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Gender"
+                android:textAlignment="center"
+                android:textColor="#302C2C"
+                android:textSize="18sp" />
+
+            <RadioGroup
+                android:id="@+id/radioGroupGender"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/radioButton8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="6sp"
+                    android:text="Male" />
+
+                <RadioButton
+                    android:id="@+id/radioButton9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Female" />
+            </RadioGroup>
+
+        </LinearLayout>
 
         <EditText
-            android:id="@+id/editTextTextPersonName2"
+            android:id="@+id/edtPhone"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
@@ -104,7 +134,7 @@
             android:textColorHint="#464646" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/edtAddress"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
@@ -118,8 +148,9 @@
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
 
+
         <Button
-            android:id="@+id/btn_candidate"
+            android:id="@+id/btnSignupEmployer"
             style="@android:style/Widget.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
