--- a/app/src/main/res/layout/activity_sign_up_employer.xml
+++ b/app/src/main/res/layout/activity_sign_up_employer.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".SignUpEmployer">
 
     <TextView
         android:id="@+id/textView"
@@ -29,7 +30,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <EditText
-            android:id="@+id/editTextTextPersonName5"
+            android:id="@+id/edtEmail"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
@@ -44,7 +45,7 @@
             android:textColorHint="#464646" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName4"
+            android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
@@ -54,12 +55,12 @@
             android:background="@drawable/edittext_background"
             android:ems="10"
             android:hint="Password"
-            android:inputType="textPersonName"
+            android:inputType="textPassword"
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName3"
+            android:id="@+id/edtCompanyname"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
@@ -74,7 +75,7 @@
             android:textColorHint="#464646" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName2"
+            android:id="@+id/edtPhone"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
@@ -89,7 +90,7 @@
             android:textColorHint="#464646" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/edtAddress"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
@@ -104,7 +105,7 @@
             android:textColorHint="#464646" />
 
         <Button
-            android:id="@+id/btn_candidate"
+            android:id="@+id/btnSignupEmployer"
             style="@android:style/Widget.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
