--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -46,7 +46,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/btn_candidate"
+            android:id="@+id/btnSignupEmployer"
             style="@android:style/Widget.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
