--- a/app/src/main/res/menu/menu_candidate.xml
+++ b/app/src/main/res/menu/menu_candidate.xml
@@ -47,7 +47,7 @@
                     android:title="Tài khoản" />
 
                 <item
-                    android:id="@+id/nav_hotro"
+                    android:id="@+id/menu_candidate_logout"
                     android:icon="@drawable/ic_signout_menu_candidate"
                     android:title="Đăng xuất" />
             </menu>
