--- a/app/src/main/res/layout/item_employer.xml
+++ b/app/src/main/res/layout/item_employer.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:text="Tittle"
             android:textAllCaps="true"
-            android:textColor="#EF5350"
+            android:textColor="#000"
             android:textStyle="bold"
             android:textSize="22dp" />
 
