--- a/app/src/main/res/menu/menu_candidate.xml
+++ b/app/src/main/res/menu/menu_candidate.xml
@@ -4,10 +4,10 @@
     <group android:checkableBehavior="single">
         <item android:title="Menu">
             <menu>
-                <item
-                    android:id="@+id/menu_candidate_home"
-                    android:icon="@drawable/ic_home_menu_candidate"
-                    android:title="Trang chủ" />
+<!--                <item-->
+<!--                    android:id="@+id/menu_candidate_home"-->
+<!--                    android:icon="@drawable/ic_home_menu_candidate"-->
+<!--                    android:title="Trang chủ" />-->
 
                 <item
                     android:id="@+id/menu_candidate_tintuyendung"
