--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="30dp"
-    tools:context=".SignIn">
+    tools:context=".Activity.SignIn">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -103,7 +103,7 @@
 
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btnForgetPassword"
+                    android:id="@+id/btn_ForgetPassword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
@@ -116,7 +116,7 @@
 
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnSignIn"
+                android:id="@+id/btn_SignIn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/forget_password_block"
@@ -128,10 +128,10 @@
 
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnSignUp"
+                android:id="@+id/btn_SignUp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/btnSignIn"
+                android:layout_below="@id/btn_SignIn"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
                 android:background="#00000000"
