Feature: sign_up

--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -12,9 +12,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="148dp"
-        android:text="Welcome"
-        android:textSize="55sp"
+        android:fontFamily="@font/archivo_bold"
+        android:text="Hãy chọn loại tài khoản tương ứng"
+        android:textAlignment="center"
+
         android:textColor="#ffffff"
+        android:textSize="55sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
