--- a/app/src/main/res/drawable/background_intro.xml
+++ b/app/src/main/res/drawable/background_intro.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <gradient android:angle="90" android:startColor="#f2a02b" android:endColor="#df6f56"/>
+        <gradient android:angle="90" android:startColor="#C9BDAC" android:endColor="#CDA59C"/>
 
     </shape>
 </item>
