--- a/app/src/main/res/layout/activity_sign_up_candidate.xml
+++ b/app/src/main/res/layout/activity_sign_up_candidate.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="104dp"
+        android:fontFamily="@font/archivo_bold"
         android:text="SIGNUP"
         android:textColor="@color/black"
         android:textSize="55sp"
