--- a/app/src/main/res/drawable/botron_button.xml
+++ b/app/src/main/res/drawable/botron_button.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#3F51B5"/>
+            <solid android:color="#246BFD"/>
             <corners android:radius="15dp"/>
         </shape>
     </item>
