--- a/app/src/main/res/layout/activity_sign_up_candidate.xml
+++ b/app/src/main/res/layout/activity_sign_up_candidate.xml
@@ -150,7 +150,7 @@
             android:textColorHint="#464646" />
 
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSignupEmployer"
             style="@android:style/Widget.Button"
             android:layout_width="match_parent"
