--- a/app/src/main/res/layout/activity_sign_up_employer.xml
+++ b/app/src/main/res/layout/activity_sign_up_employer.xml
@@ -105,7 +105,7 @@
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSignupEmployer"
             style="@android:style/Widget.Button"
             android:layout_width="match_parent"
