--- a/app/src/main/res/layout/activity_get_recruitment_news_list.xml
+++ b/app/src/main/res/layout/activity_get_recruitment_news_list.xml
@@ -63,8 +63,8 @@
                 android:id="@+id/rc_RecruitmentNewsList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:padding="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="10dp"
                 app:layout_constraintTop_toBottomOf="@id/search_view" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
