--- a/app/src/main/res/layout/item_recruitment_news.xml
+++ b/app/src/main/res/layout/item_recruitment_news.xml
@@ -2,8 +2,11 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:layout_marginEnd="10dp"
     app:cardCornerRadius="8dp">
 
     <RelativeLayout
@@ -18,8 +21,8 @@
             android:text="Tittle"
             android:textAllCaps="true"
             android:textColor="#EF5350"
-            android:textStyle="bold"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_employer_name"
