--- a/app/src/main/res/layout/item_employer.xml
+++ b/app/src/main/res/layout/item_employer.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardView_employer"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:layout_marginEnd="10dp"
     app:cardCornerRadius="8dp">
 
     <RelativeLayout
@@ -18,15 +21,15 @@
             android:text="Tittle"
             android:textAllCaps="true"
             android:textColor="#000"
-            android:textStyle="bold"
-            android:textSize="22dp" />
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/img_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
             android:layout_below="@id/tv_company_name"
+            android:layout_marginTop="7dp"
             tools:srcCompat="@drawable/ic_location" />
 
         <TextView
@@ -34,9 +37,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_company_name"
-            android:layout_toEndOf="@id/img_location"
-            android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_toEndOf="@id/img_location"
             android:text="96 Định Công"
             android:textColor="@color/black"
             android:textSize="20dp" />
@@ -45,8 +48,8 @@
             android:id="@+id/img_phonecall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/tv_company_address"
             android:layout_marginTop="7dp"
-            android:layout_below="@id/img_location"
             tools:srcCompat="@drawable/ic_phone" />
 
         <TextView
@@ -54,14 +57,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_company_address"
-            android:layout_toEndOf="@id/img_phonecall"
-            android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_toEndOf="@id/img_phonecall"
             android:text="0987654321"
             android:textColor="@color/black"
             android:textSize="20dp" />
-
-
 
 
     </RelativeLayout>
