--- a/app/src/main/res/layout/activity_get_candidate_info_detail.xml
+++ b/app/src/main/res/layout/activity_get_candidate_info_detail.xml
@@ -44,7 +44,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
                 android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
@@ -89,10 +89,31 @@
                     android:text="meomeomeo@gmail.com" />
 
                 <TextView
-                    android:id="@+id/phoneLabel"
+                    android:id="@+id/genderLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tvEmail"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/archivo_bold"
+                    android:text="Giới tính"
+                    android:textAllCaps="true"
+                    android:textColor="@color/black"
+                    android:textSize="17dp" />
+
+                <Spinner
+                    android:id="@+id/spinnerGender"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/genderLabel"
+                    android:layout_marginTop="10dp"
+                    android:padding="5dp"
+                    android:background="@drawable/bg_strip_round"/>
+
+                <TextView
+                    android:id="@+id/phoneLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/spinnerGender"
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/archivo_bold"
                     android:text="số điện thoại"
@@ -174,31 +195,28 @@
                     android:padding="5dp"
                     android:text="Hoạt động" />
 
-
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnDelete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tvStatus"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginTop="20dp"
-                    android:background="#F44336"
+                    android:layout_marginTop="10dp"
+                    android:background="#00000000"
                     android:fontFamily="@font/archivo_bold"
-                    android:padding="4dp"
-                    android:text="xóa tài khoản ?"
-                    android:textColor="@color/white"
-                    android:textSize="16dp" />
+                    android:padding="3dp"
+                    android:text="xóa tài khoản?"
+                    android:textColor="#F44336"
+                    android:textSize="14dp" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnUpdate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/btnDelete"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/bg_strip_round"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/bg_btn_blue_corner_16"
                     android:text="cập nhật"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="20dp" />
 
             </RelativeLayout>
